--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -21,9 +21,9 @@
             //     useFerry: true,
             //     maxWalkingTime: 1
             // };
+            // initializeMaps(placeIds, travelModes, options);
+            initializeMaps();
             initAutoComplete();
-            initializeMaps(placeIds, travelModes, options);
-
             window.closePopup = function() {
                 openPopupMap(placeIds,travelModes,options);
             }
